Correct misaligned "zoom" icon for queue operations.

--- a/data/css/welcome.css
+++ b/data/css/welcome.css
@@ -1298,7 +1298,7 @@ blockquote.terminal {
 .queue-zoom-icon {
   position: absolute;
   top: 0px;
-  right: 184px;
+  right: 189px;
   width: 30px;
   height: 30px;
   z-index: 100;
